--- a/server/data/filesConfig.json
+++ b/server/data/filesConfig.json
@@ -1,1 +1,1 @@
-[{"title":{"en":"2","ru":"Эмисионные документы"},"directoryName":"files1","fileNames":[]},{"title":{"en":"2","ru":"Эмисионные документы2"},"directoryName":"files2","fileNames":[]}]
+[{"title":{"en":"Documents 1","ru":"Документы 1"},"directoryName":"files1","fileNames":[]},{"title":{"en":"Documents 2","ru":"Документы 2"},"directoryName":"files2","fileNames":[]}]
