--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "ng serve -o",
     "server": "nodemon ./server/server.js",
     "start": "node ./server/server.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
