--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular8-yandex-maps": "^1.14.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -35,11 +36,16 @@
     "express-basic-auth": "^1.2.0",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-jwt": "^5.3.3",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.27",
+    "mongoose-gridfs": "^1.2.47",
+    "multer": "^1.4.2",
     "normalize.scss": "^0.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "rxjs": "~6.5.5",
+    "stream-buffers": "^3.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
