--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,3 +1,6 @@
 PORT=3000
+
+MONGO_URI=mongodb+srv://boris:boris@sungenerationx.qo3lq.mongodb.net/sungenerationx?retryWrites=true&w=majority
+
 JWT_SECRET=ggwplol
 JWT_EXPIRE=1h
